# cfspeedtest

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: CI.yml  pre-commit.yml  release.yaml  rust-clippy.yml  rust.yml  security-checks.yml
examples/: download_test.rs  latency_test.rs  simple_speedtest.rs
src/: boxplot.rs  cli.rs  lib.rs  main.rs  measurements.rs  progress.rs  speedtest.rs  speedtest_tui.rs
src/engine/: client.rs  download.rs  error.rs  latency.rs  metadata.rs  mod.rs  runner.rs  types.rs  upload.rs
src/output/: csv.rs  json.rs  mod.rs  simple.rs
src/tui/: app.rs  dashboard.rs  events.rs  mod.rs  theme.rs  ui.rs  widgets.rs
src/tui/widgets/: header.rs  latency_plot.rs  live_chart.rs  mod.rs  progress.rs  results.rs  speed_gauge.rs
