[package]
name = "cfspeedtest"
version = "1.4.1"
edition = "2021"
license = "MIT"
description = "Unofficial CLI for speed.cloudflare.com"
readme = "README.md"
repository = "https://github.com/code-inflation/cfspeedtest/"
keywords = ["cli", "speedtest", "speed-test", "cloudflare"]
categories = ["command-line-utilities"]
exclude = [".github/"]

[dependencies]
log = "0.4"
env_logger = "0.11"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.0"
serde_json = "1.0"
indexmap = "2.9.0"
clap_complete = "4.5"
