[package]
name = "cfspeedtest"
version = "2.0.2"
edition = "2021"
license = "MIT"
description = "Unofficial CLI for speed.cloudflare.com"
readme = "README.md"
repository = "https://github.com/code-inflation/cfspeedtest/"
keywords = ["cli", "speedtest", "speed-test", "cloudflare"]
categories = ["command-line-utilities"]
exclude = [".github/"]

[dependencies]
log = "0.4"
env_logger = "0.11"
regex = "1.12"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "2.12"
clap_complete = "4.5"
indicatif = "0.17"
