[package]
name = "cfspeedtest"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "Unofficial CLI for speed.cloudflare.com"
readme = "README.md"
repository = "https://github.com/code-inflation/cfspeedtest/"
keywords = ["cli", "speedtest", "speed-test", "cloudflare"]
categories = ["command-line-utilities"]
exclude = [".github/"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "socks"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
csv = "1.3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
